zag-poc/tests/diag/e0002_realtime_io.expected
error[E0002]: capability violation — `@realtime` constraint broken in function `bad_realtime_io`
  --> tests/diag/e0002_realtime_io.zag:5:1
   |
5 | fn bad_realtime_io() void @realtime {
   | ^^^^^^^^^^^^^^^ effect occurs here
   = note: @realtime functions must not perform heap allocation, IO, or lock acquisition
   = hint: remove the allocation/IO/lock, or remove the @realtime annotation
