zag-poc/tests/diag/e0002_realtime_io.zag
// E0002: @realtime function must not do IO
// Uses print_str (IO effect = 4) which @realtime forbids
extern fn print_str(s: []u8) void @io;

fn bad_realtime_io() void @realtime {
    print_str("doing IO");
}

fn main() i32 {
    return 0;
}
